# AI4MH

./: .env.example  .gitignore  ANSWER.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  index.md  requirements.txt
SUBMISSION/: DEPLOYMENT.md  (+4 more)
backend/: .env.example  Dockerfile  alert_engine.py  config.py  crisis_scoring.py  crisis_signal_engine.py  governance_engine.py  governance_filters.py  ingest_posts.py  main.py  nlp_processing.py  pyproject.toml  requirements.txt
backend/ai4mh_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: alerts.py  ingest.py  monitoring.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  config.py  db.py
backend/app/crud/: __init__.py  base.py  sqlite.py
backend/app/fixtures/: __init__.py  synthetic_posts.py
backend/app/schemas/: alert.py
backend/app/services/: alert_service.py  discourse_scoring.py  enrichment_service.py  ingestion_service.py  pipeline_service.py  scoring_service.py
backend/app/utils/: population.py
backend/evaluation/: __init__.py  metrics.py
backend/lexicons/: __init__.py
backend/models/: __init__.py  alert.py  post.py  score.py
backend/pipeline/: __init__.py  aggregate.py  alert.py  enrich.py  ingest.py  score.py
backend/storage/: __init__.py  base.py  memory.py  sqlite.py
backend/tests/: __init__.py  conftest.py  test_alert_service.py  test_api.py  test_scoring.py
backend/tests/fakes/: __init__.py  memory_store.py
(+81 files in other folders)
