[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4mh-backend"
version = "0.1.0"
description = "Backend service for the AI4MH crisis monitoring demo."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.111.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.3",
    "uvicorn[standard]==0.29.0",
    "vaderSentiment==3.3.2",
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.0",
    "pytest==8.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
